zuul网关动态路由以及路由刷新

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -30,8 +30,9 @@ spring:
         discovery:
           register: false
 
-zuul:
-  routes:
-     api:
-       path: /api/**
-       service-id: consul-miya
+#zuul:
+#  routes:
+#     api:
+#       path: /api/**
+#       #service-id: consul-miya
+#       url: http://localhost:9800
